# Typeit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
data/: config.ini  words.txt
src/: Application.cpp  Application.h  main.cpp
src/engine/: GameEngine.cpp  GameEngine.h
src/managers/: RecordManager.cpp  RecordManager.h  WordManager.cpp  WordManager.h
src/models/: FallingWord.cpp  FallingWord.h  GameRecord.cpp  GameRecord.h  GameStats.h  Word.cpp  Word.h
src/screens/: BaseScreen.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  ResultScreen.cpp  ResultScreen.h  StatsScreen.cpp  StatsScreen.h
src/utils/: Constants.h  GameConfig.cpp  GameConfig.h
